# forcefield

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  config.toml
.github/: dependabot.yml
.github/workflows/: build-test.yml
src/: authenticated_user.rs  check_auth.rs  config.rs  cookies.rs  index.rs  lib.rs  login.rs  main.rs  metrics.rs  rate_limit.rs  rocket_main.rs  same_origin.rs  state.rs
static/: style.css
templates/: logged_in.html  login.html  login.html.tera
tests/: integration_test.rs
