[package]
name = "forcefield"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
duration-str = "0.18.0"
rocket = { version = "0.5.1", features = ["secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = "1.0.228"
serde_json = "1.0.148"
time = {version = "0.3.44", features = ["serde", "serde-human-readable"] }
urlencoding = "2.1"
