[package]
name = "forcefield"
version = "0.1.0"
edition = "2024"

[lib]
name = "forcefield"
path = "src/lib.rs"

[[bin]]
name = "forcefield"
path = "src/main.rs"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie", "cookie-private"] }
base64 = "0.22.1"
cookie = {version = "0.18.1", features = ["private"] }
duration-str = "0.18.0"
figment = { version = "0.10.19", features = ["toml", "test"] }
rocket = { version = "0.5.1", features = ["secrets"] }
rocket_dyn_templates = { version = "0.2.0", features = ["tera"] }
serde = "1.0.228"
serde_json = "1.0.148"
time = {version = "0.3.44", features = ["serde", "serde-human-readable"] }
tokio = "1.48.0"
urlencoding = "2.1"
