[package]
name = "forcefield"
version = "0.1.0"
edition = "2024"

[lib]
name = "forcefield"
path = "src/lib.rs"

[[bin]]
name = "forcefield"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
argon2 = "0.5.3"
askama = "0.15.1"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["cookie", "cookie-private"] }
base64 = "0.22.1"
config = { version = "0.15.19", features = ["toml"] }
cookie = { version = "0.18.1", features = ["private"] }
duration-str = "0.18.0"
futures = "0.3.31"
password-hash = { version = "0.5.0", features = ["std"] }
percent-encoding = "2.3.2"
serde = "1.0.228"
serde_json = "1.0.148"
time = { version = "0.3.44", features = ["serde", "serde-human-readable"] }
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs"] }
url = { version = "2.5.7", features = ["serde"] }
urlencoding = "2.1"

[dev-dependencies]
tower = "0.5"
